MariaDB seeeeems to work... Weird socket error still

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,14 +1,15 @@
 DOMAIN_NAME=mmondell.42.fr
 
-MARIA_DB=databse
-MARIA_DB_ROOT_PWD=root1234
-MARIA_DB_USER=mmondell
+MARIA_WORDPRESS_DB=wordpress_db
+MARIA_DB_NEW_ROOT_PWD=inception
+MARIA_DB_USER=wordpress
 MARIA_DB_USER_PWD=mmondell1234
 
 WORDPRESS_ADMIN=armorine
-WORDPRESS_ADMIN_PWD=armorine1234
+WORDPRESS_ADMIN_PWD=inception
 WORDPRESS_USER=mmondell
-WORDPRESS_USER_PWD=mmondell1234
+WORDPRESS_USER_PWD=inception
 
 CERT_CRT=nginx_ssl.crt
 CERT_KEY=nginx_ssl.key
+
