I hate this shit

--- a/srcs/.env
+++ b/srcs/.env
@@ -3,13 +3,20 @@ DOMAIN_NAME=mmondell.42.fr
 MARIA_WORDPRESS_DB=wordpress_db
 MARIA_DB_NEW_ROOT_PWD=inception
 MARIA_DB_USER=wordpress
+DB_EMAIL=wordpress@superuser.com
 MARIA_DB_USER_PWD=mmondell1234
+DB_SERVER=mariadb
+DB_DATADIR=/var/lib/mysql
 
 WORDPRESS_ADMIN=armorine
 WORDPRESS_ADMIN_PWD=inception
+WORDPRESS_ADMIN_EMAIL=armorine@inception.com
 WORDPRESS_USER=mmondell
+WORDPRESS_USER_EMAIL=mmondell@inception.com
 WORDPRESS_USER_PWD=inception
+WORDPRESS_TITLE=Inception
 
 CERT_CRT=nginx_ssl.crt
 CERT_KEY=nginx_ssl.key
 
+VOLUME_PATH=/home/biohazard/inception_data
