--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,5 +1,8 @@
 # Parent image layer
-FROM alpine:3.15
+FROM debian:buster
+
+# Opens ports
+EXPOSE 443
 
 RUN mkdir -p /var/www/html
 
@@ -7,9 +10,12 @@ COPY ./tools/site/* /var/www/html/
 
 COPY ./tools/default.conf /etc/nginx/http.d/default.conf
 
-RUN apk update && apk upgrade 
+# Update and upgrade apt-get
+RUN apt update && apt upgrade -y
+RUN apt-get update && apt-get upgrade -y
 
-RUN apk add nginx openssl
+RUN apt install -y nginx \
+				openssl
 
 RUN mkdir -p /etc/ssl/private && mkdir -p /etc/ssl/certs
 
@@ -21,9 +27,6 @@ RUN openssl req -x509 \
 				-subj "/CN=mmondell.42.fr/C=CA/ST=Quebec/L=Quebec City/O=42Network/OU=42Quebec" \
 				-keyout /etc/ssl/private/nginx_ssl.key \
 				-out /etc/ssl/certs/nginx_ssl.crt
-
-# Opens ports
-EXPOSE 443
 
 # Specify commands to run at Runtime when the container is set
 CMD ["nginx", "-g", "daemon off;"]
