--- a/srcs/.env
+++ b/srcs/.env
@@ -19,4 +19,4 @@ WORDPRESS_TITLE=Inception
 CERT_CRT=nginx_ssl.crt
 CERT_KEY=nginx_ssl.key
 
-VOLUME_PATH=/home/biohazard/inception_data
+VOLUME_PATH=$HOME/data
