--- a/srcs/requirements/wordpress/tools/www.conf
+++ b/srcs/requirements/wordpress/tools/www.conf
@@ -1,19 +1,16 @@
 [www]
+clear_env=false
 
-user = www-data
-group = www-data
+user = mmondell
+group = mmondell
 
-listen = wordpress:9000
-
-listen.owner = www-data
-listen.group = www-data
+listen = 9000
+listen.owner = mmondell
+listen.group = mmondell
 
 pm = dynamic
-
 pm.max_children = 5
-
 pm.start_servers = 2
-
 pm.min_spare_servers = 1
-
 pm.max_spare_servers = 3
+pm.max_requests = 100
