--- a/srcs/requirements/nginx/tools/default.conf
+++ b/srcs/requirements/nginx/tools/default.conf
@@ -5,8 +5,8 @@ server {
 
     server_name $DOMAIN_NAME;
 
-    ssl_certificate     /etc/nginx/ssl/$CERT_CRT;
-    ssl_certificate_key /etc/nginx/ssl/$CERT_KEY;
+    ssl_certificate     /etc/ssl/certs/nginx_cert.crt;
+    ssl_certificate_key /etc/ssl/private/nginx_ssl.key;
     ssl_protocols       TLSv1.2 TLSv1.3;
 	
     root    /var/www/html;
