404 or 502, no fix yet

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,20 +1,20 @@
 DOMAIN_NAME=mmondell.42.fr
 
-MARIA_WORDPRESS_DB=wordpress_db
-MARIA_DB_NEW_ROOT_PWD=inception
-MARIA_DB_USER=wordpress
+WP_DATABASE=wordpress_db
+DB_ROOT_PWD=inception
+DB_USER=wordpress
+DB_USER_PWD=mmondell1234
 DB_EMAIL=wordpress@superuser.com
-MARIA_DB_USER_PWD=mmondell1234
 DB_DATADIR=/var/lib/mysql
 
 DB_SERVER=mariadb
-WORDPRESS_ADMIN=armorine
-WORDPRESS_ADMIN_PWD=inception
-WORDPRESS_ADMIN_EMAIL=armorine@inception.com
-WORDPRESS_USER=mmondell
-WORDPRESS_USER_EMAIL=mmondell@inception.com
-WORDPRESS_USER_PWD=inception
-WORDPRESS_TITLE=Inception
+WP_ADMIN=armorine
+WP_ADMIN_PWD=inception
+WP_ADMIN_EMAIL=armorine@inception.com
+WP_USER=mmondell
+WP_USER_PWD=mmondell
+WP_USER_EMAIL=mmondell@student.42quebec.com
+WP_TITLE=Wordpress
 
 CERT_CRT=nginx_ssl.crt
 CERT_KEY=nginx_ssl.key
