--- a/srcs/requirements/wordpress/conf/www.conf
+++ b/srcs/requirements/wordpress/conf/www.conf
@@ -1,10 +1,10 @@
 [www]
-clear_env=false
+clear_env = no
 
 user = mmondell
 group = mmondell
 
-listen = 9000
+listen = 0.0.0.0:9000
 listen.owner = mmondell
 listen.group = mmondell
 
