--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -10,19 +10,22 @@ server {
     ssl_protocols       TLSv1.2 TLSv1.3;
 	
     root    /var/www/html;
-    index   index.php;
+    index   index.php index.html index.htm;
 
     location / {
-        autoindex   on;
-        try_files   \$uri \$uri/ =404;
+        try_files $uri $uri/ /index.php?$query_string;
+    }
+
+    location = /404.html {
+        internal;
     }
 
     location ~ \.php$ {
+        include fastcgi_params;
+        try_files $uri /index.php =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass            wordpress:9000;
-        fastcgi_index           index.php;
-        include                 fastcgi_params;
-        fastcgi_param           SCRIPT_FILENAME \$document_root\$fastcgi_script_name;
-        fastcgi_param           PATH_INFO \$fastcgi_path_info;
+        fastcgi_pass   wordpress:9000;
+        fastcgi_index  index.php;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 }
