ALpine not working

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,10 +1,10 @@
 DOMAIN_NAME=mmondell.42.fr
 
-MARIA_WORDPRESS_DB=wordpress_db
-MARIA_DB_NEW_ROOT_PWD=inception
-MARIA_DB_USER=wordpress
+WP_DB=wordpress_db
+DB_ROOT_PWD=inception
+DB_USER=wordpress
 DB_EMAIL=wordpress@superuser.com
-MARIA_DB_USER_PWD=mmondell1234
+DB_USER_PWD=mmondell1234
 DB_DATADIR=/var/lib/mysql
 
 DB_SERVER=mariadb
@@ -15,8 +15,3 @@ WORDPRESS_USER=mmondell
 WORDPRESS_USER_EMAIL=mmondell@inception.com
 WORDPRESS_USER_PWD=inception
 WORDPRESS_TITLE=Inception
-
-CERT_CRT=nginx_ssl.crt
-CERT_KEY=nginx_ssl.key
-
-VOLUME_PATH=$HOME/data
