--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,44 +1,22 @@
-FROM alpine:3.14
+FROM debian:buster
 
-# Expose the port to the network
 EXPOSE 9000
 
-ARG DOMAIN_NAME=DOMAIN_NAME
-ARG MARIA_WORDPRESS_DB=MARIA_WORDPRESS_DB
-ARG MARIA_DB_USER=MARIA_DB_USER
-ARG MARIA_DB_USER_PWD=MARIA_DB_USER_PWD
-ARG DB_SERVER=DB_SERVER
-ARG WORDPRESS_TITLE=WORDPRESS_TITLE
-ARG WORDPRESS_ADMIN=WORDPRESS_ADMIN
-ARG WORDPRESS_ADMIN_PWD=WORDPRESS_ADMIN_PWD
-ARG WORDPRESS_ADMIN_EMAIL=WORDPRESS_ADMIN_EMAIL
-ARG WORDPRESS_USER=WORDPRESS_USER
-ARG WORDPRESS_USER_EMAIL=WORDPRESS_USER_EMAIL
-ARG WORDPRESS_USER_PWD=WORDPRESS_USER_PWD
+RUN apt update && apt upgrade -y
 
-# Update and upgrade package manager
-RUN apk update
-RUN apk upgrade
+RUN apt-get install -y php7.3-fpm php7.3-mysql mariadb-client curl && rm -rf /var/lib/apt/lists/*
 
-# Copy files to the container
-COPY ./tools/* ./
+COPY ./conf/www.conf /etc/php/7.3/fpm/pool.d
 
-# Make the script executable
-RUN chmod +x setup.sh
+ADD https://wordpress.org/latest.tar.gz /var/www/latest.tar.gz
+RUN tar -xvf /var/www/latest.tar.gz && rm -rf latest.tar.gz
 
-# Install dependencies
-RUN apk add php7 php7-fpm php7-opcache php7-mysqli php7-session php7-iconv php7-json \
-	php7-gd php7-curl php7-xml php7-common php7-imap php7-cgi php7-pdo php7-pdo_mysql \
-	php7-soap php7-xmlrpc php7-posix php7-mcrypt php7-redis php7-gettext php7-ldap \
-	php7-ctype php7-dom php7-phar curl
+RUN	curl https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar --output /usr/bin/wp
+RUN	chmod +x ./usr/bin/wp
 
-# add a user profile to the container (-D == no password)
-RUN adduser -D mmondell
+RUN mkdir -p /run/php
 
-RUN mkdir -p /var/www/html
-RUN chmod 777 -R /var/www/html
-RUN chown -R mmondell:mmondell /var/www/html
+COPY ./tools/setup_wp.sh .
+RUN chmod +x setup_wp.sh
 
-ENTRYPOINT [ "sh", "setup.sh" ]
-
-CMD ["php-fpm7", "-F"]
+ENTRYPOINT [ "./setup_wp.sh" ]
