--- a/srcs/requirements/nginx/tools/default.conf
+++ b/srcs/requirements/nginx/tools/default.conf
@@ -1,16 +1,16 @@
 server {
 
     listen  443 ssl;
-    listen  [::]:443 ssl;
+    # listen  [::]:443 ssl;
 
-    server_name $DOMAIN_NAME;
+    server_name mmondell.42.fr;
 
     ssl_certificate     /etc/ssl/certs/nginx_cert.crt;
     ssl_certificate_key /etc/ssl/private/nginx_ssl.key;
     ssl_protocols       TLSv1.2 TLSv1.3;
 	
     root    /var/www/html;
-    index   index.php;
+    index   index.php index.html;
 
     location / {
         autoindex   on;
